--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<html>
+    <head>
+        <title>Your website</title>
 
+    </head>
+
+    <body bgcolor="999999">
+
+<table width="900" height="800" border="1" align="center" bgcolor="white">
+<tr>
+    <td colspan="6" height="150"><img src="img/logo.png"</td>
+</tr>
+<tr height="6">
+    <td align="center"><a href="index.html">Defult page</a></td><td><a href="Youtube.html">Youtube page</a></td><td><a href="About me.html">About me</a></td>
+    <td><a href="Contact.html">Contact</a></td><td width="400">&nbsp;</td>
+</tr>
+<tr>
+    <td height="60" width="728" colspan="6" bgcolor="252185"><img class="alignnone" src="https://img.webme.com/pic/i/isacotur/728x90_banner_reklam_11.png" alt="728X90 Banner Reklam Alanı Kodu" width="728" height="90"></td>
+</tr>
+<tr>
+    <td colspan="6" valign="top">Your photos</td>
+</tr>
+
+</table>
+<table align="center" border="1" width="900">
+<tr>
+<td align="center">My blog</td>
+</tr>
+</table>
+    </body>
+
+
+</html>
